# atmega328p-rs

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
programs/: basic.hex  two.hex
src/: cpu.rs  disassembler.rs  main.rs  memory.rs  system.rs  utils.rs
src/gui/: assembly_view.rs  cpu_state.rs  memory_view.rs  menu.rs  mod.rs
src/tests/: cpu.rs
