[package]
name = "atmega328p-rs"
version = "0.1.0"
authors = ["Ricardus Severino"]
edition = "2021"
description = "An ATmega328P emulator in Rust"
license = "MIT"
keywords = ["avr", "microcontroller", "emulator"]

[dependencies]
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = "0.19.0"
lazy_static = "1.4.0"